# the_valley_workshop_agents

./: .env.example  .gitignore  01_restaurante_agent.py  01_voice_agent.py  02_restaurante_agent.py  03_browser_use.py  README.md  main.py  pyproject.toml
src/: models.py
